--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,15 +11,19 @@ default = true
 
 [tool.poetry.dependencies]
 python = "3.6.8"
-pandas = "1.1.5"
-ipdb = ">0.13.4"
-scikit-learn = "0.23.2"
-xgboost = "1.1.1"
+Cython = ">=0.28.2"
+pandas = ">=1.0.0"
+scikit-learn = "0.24.1"
+xgboost = "1.3.3"
 pyyaml = "5.3.1"
+psycopg2 = "^2.8.4"
 joblib = "1.0.1"
-psycopg2 = "^2.8.6"
-munch = '2.5.0'
-dynamic-yaml = "1.2.3"
+ipdb = "0.13.4"
+mlflow = "1.13.1"
+matplotlib = "3.3.4"
+seaborn = "0.11.1"
+plotly = "4.14.3"
+shap = "0.39.0"
 
 [tool.poetry.dev-dependencies]
 
