--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,8 @@ matplotlib = "3.3.4"
 seaborn = "0.11.1"
 plotly = "4.14.3"
 shap = "0.39.0"
+dynamic-yaml = "1.2.3"
+munch = '2.5.0'
 
 [tool.poetry.dev-dependencies]
 
