:sparkles: it works !

--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,8 @@
-nrows_train: 10
+nrows_train: 1000
 nrows_test: 10
 split_ratio: 0.5
 model_name: dummy
 sample_name: dummy_sample
 model_type: logit
 get_new: False
+only_quantitative: True
